# mATLAS

./: .gitignore  README.md  matlas.py  matlas_config.toml.example  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
docs/: README.md  architecture.md  gui_mvc.md  integration_model.md  preset_authoring_quickstart.md  preset_schema.md  source_adapters.md  testing_strategy.md  traceability.md  transform_behavior.md
gui/: __init__.py  accessibility.py  app.py  main_window.ui  theme.py
gui/assets/: matlas_transformer_desktop_icon.icns
gui/widgets/: __init__.py  drag_drop_line_edit.py
launcher/: __init__.py  cli.py  gui.py  profiles.py
model_atlas/: README.md  __init__.py  config.py  export.py  integrity.py  models.py  pipeline.py  reporting.py
model_atlas/model/: __init__.py  families.py
model_atlas/presets/: __init__.py  expr.py  lint.py  matcher.py  spec.py  spec_loader.py
model_atlas/sources/: __init__.py  base.py  container.py  csv_source.py  discover.py  excel_source.py  extractor.py  folder.py  format_detect.py  pathmatch.py  registry.py  sqlite_source.py  staging.py
model_atlas/sources/readers/: __init__.py  base.py  csv_reader.py  excel_reader.py  sqlite_reader.py  xml_reader.py
model_atlas/sources/readers/xml_specifics/: __init__.py  cellebrite_xml_reports.py
model_atlas/sqlite/: _sql.py  config.py  dedup.py  extractor.py  integrity.py  locate.py  sql_query.py
model_atlas/transforms/: __init__.py  assemble.py  builtin.py  expression.py  rank.py  registry.py  value_maps.py
presets/axiom/: ios_apple_maps_trips.yaml  ios_cached_locations.yaml  ios_significant_locations_visits.yaml
presets/cellebrite/: cellebrite_xml_celltower.yaml  cellebrite_xml_journey.yaml  cellebrite_xml_location.yaml  cellebrite_xml_wirelessnetwork.yaml
presets/ios/: ios_routined_cached_locations.yaml  ios_routined_significant_visits.yaml
tests/: conftest.py  test_config.py  test_feature_batch.py  test_golden_pipeline.py  test_pipeline.py
tests/fixtures/golden/: cached.csv  expected_primary.csv  expected_secondary.csv  primary_cached.preset.yaml  secondary_cached.preset.yaml
tests/launcher/: test_entrypoint.py
tests/model/: test_families.py
tests/presets/: test_expr.py  test_frontier_mapped_absent.py  test_lint.py  test_match_files.py  test_matcher.py  test_spec.py
tests/source_agnostic/: __init__.py  test_axiom_model_parser.py
tests/sources/: test_container.py  test_discover.py  test_discover_extract.py  test_extractor.py  test_format_detect.py  test_pathmatch.py  test_readers.py  test_registry.py  test_staging.py  test_xml_cellebrite.py  test_xml_reader.py
tests/transforms/: test_assemble.py  test_dst.py  test_iso8601.py  test_local_zone.py  test_rank.py  test_timezone.py  test_transforms.py
tests/ufdr_parser/: conftest.py  test_dump.py  test_model_signatures.py  test_models.py  test_parallel.py
ufdr_parser/: __init__.py  __main__.py  archive.py  cli.py  const.py  dump.py  models.py  parallel.py  reader.py  scan.py  source_lookup.py  writer.py
ufdr_parser/model_signatures/: __init__.py  baseline.py  drift.py
utils/: lint_presets.py
utils/AXIOM_model_parser/: README.md  axiom_model_parser.py
