[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model-atlas"
version = "0.1.0"
description = "Declarative spatio-temporal forensic data processing from CSV, Excel, and SQLite sources into a canonical assertion model."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Recovery Tools",
]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    # zoneinfo needs the IANA tz database; Windows has no system copy, so ship it there.
    "tzdata; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
gui = [
    "PySide6>=6.7",
]
# ufdr_parser is a standalone side package; its lxml/psutil deps are kept out of the
# model_atlas core so a core install stays lean.
ufdr = [
    "lxml>=5.0",
    "psutil>=5.9",
]

[project.scripts]
matlas = "launcher.cli:run"
matlas-gui = "launcher.gui:run"
ufdr-parser = "ufdr_parser.cli:main"

# Explicit package list: the repo uses a flat layout with three top-level
# packages. Auto-discovery refuses flat-layout multi-package projects, so we
# list them here.
[tool.setuptools]
packages = [
    "gui",
    "gui.widgets",
    "launcher",
    "model_atlas",
    "model_atlas.model",
    "model_atlas.presets",
    "model_atlas.sources",
    "model_atlas.sqlite",
    "model_atlas.transforms",
    "ufdr_parser",
    "ufdr_parser.model_signatures",
]

[tool.setuptools.package-data]
gui = ["*.ui", "assets/*"]
